Adds exclusions for build folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,8 @@
 {
-	"folders": [
-		{
-			"path": "."
-		}
-	],
 	"files.exclude": {
 		"**/.git": true,
+		"**/.vscode": true,
 		"**/bin": true,
 		"**/obj": true
 	},
-	"settings": {}
 }
